added n64 game downloads

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a style=" padding-bottom: 10px;" href="index.html">HOME</a></li>
                 <li><a href="games.html">GAMES</a></li>
+                <li><a href="n64.html">N64 Games</a></li>
                 <li><a href="proxy.html">PROXY</a></li>
             </ul>
         </nav>
