--- a/games.html
+++ b/games.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a style=" padding-bottom: 10px;" href="games.html">GAMES</a></li>
+                <li><a href="n64.html">N64 Games</a></li>
                 <li><a href="proxy.html">PROXY</a></li>
             </ul>
         </nav>
