added doom and zelda to emulator games

--- a/n64.html
+++ b/n64.html
@@ -22,6 +22,8 @@
         <ul class="n64">
             <li><a href="N64Games/Mario Kart 64 (E) (V1.1) [!].z64">Mario Kart 64</a></li>
             <li><a href="N64Games/portal 64 v0.11.0.z64">Portal 64</a></li>
+            <li><a href="N64Games/Legend of Zelda, The - Ocarina of Time (U) (V1.2) [!].z64">Zelda - Ocarina of Time</a></li>
+            <li><a href="N64Games/Doom 64 (U) [!].z64">DOOM 64</a></li>
         </ul>
     </body>
 </html>
