fluid sim game added

--- a/games.html
+++ b/games.html
@@ -91,6 +91,13 @@
                             <figcaption>Subway Surfers</figcaption>
                         </figure>
                     </a>
+                </td><td>
+                    <a href="WebGL-Fluid-Simulation-master/index.html" target="_blank">
+                        <figure>
+                            <img src="WebGL-Fluid-Simulation-master/logo.png" alt="slope">
+                            <figcaption>Fluid Sim</figcaption>
+                        </figure>
+                    </a>
                 </td>
             </tr>
         </table>
