hopefully fixes cache issues

--- a/games.html
+++ b/games.html
@@ -85,7 +85,7 @@
                     </a>
                 </td>
                 <td>
-                    <a href="Subway/index.html" target="_blank">
+                    <a href="Subways/index.html" target="_blank">
                         <figure>
                             <img src="Subway/NewYorkIcon.png" alt="slope">
                             <figcaption>Subway Surfers</figcaption>
