--- a/games.html
+++ b/games.html
@@ -87,7 +87,7 @@
                 <td>
                     <a href="Subways/index.html" target="_blank">
                         <figure>
-                            <img src="Subway/NewYorkIcon.png" alt="slope">
+                            <img src="Subways/NewYorkIcon.png" alt="slope">
                             <figcaption>Subway Surfers</figcaption>
                         </figure>
                     </a>
