--- a/games.html
+++ b/games.html
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="universalPaperclips/docs/index.html" target="_blank">
+                    <a href="paperclips/index2.html" target="_blank">
                         <figure>
                             <img id= "notSquare" src="images/paperclips.png" alt="slope">
                             <figcaption>Universal Paperclips</figcaption>
