--- a/games.html
+++ b/games.html
@@ -99,6 +99,16 @@
                         </figure>
                     </a>
                 </td>
+                <tr>
+                    <td>
+                    <a href="EaglerCraftX-1.8/index.html" target="_blank">
+                        <figure>
+                            <img src="images/grassBlock.png" alt="Minecraft">
+                            <figcaption>Minecraft(Eaglercraft)!</figcaption>
+                        </figure>
+                    </a>
+                </td>
+                </tr>
             </tr>
         </table>
     </body>
