eaglecraft for real

--- a/games.html
+++ b/games.html
@@ -101,7 +101,7 @@
                 </td>
                 <tr>
                     <td>
-                    <a href="EaglerCraftX-1.8/index.html" target="_blank">
+                    <a href="eaglercraft/index.html" target="_blank">
                         <figure>
                             <img src="images/grassBlock.png" alt="Minecraft">
                             <figcaption>Minecraft(Eaglercraft)!</figcaption>
