--- a/eaglercraft/index.html
+++ b/eaglercraft/index.html
@@ -33,9 +33,10 @@
 							/* example: { addr: "ws://localhost:8081/", name: "Local test server" } */
 						],
 						relays: [
-							{ addr: "wss://relay.deev.is/", comment: "lax1dude relay #1", primary: relayId == 0 },
-							{ addr: "wss://relay.lax1dude.net/", comment: "lax1dude relay #2", primary: relayId == 1 },
-							{ addr: "wss://relay.shhnowisnottheti.me/", comment: "ayunami relay #1", primary: relayId == 2 }
+                            { addr: "wss://eaglerrelay.glitch.me/", comment: "Custom relay, hopefully unblocked on school wifi..." primary: relayId == 0 },
+							{ addr: "wss://relay.deev.is/", comment: "lax1dude relay #1", primary: relayId == 1 },
+							{ addr: "wss://relay.lax1dude.net/", comment: "lax1dude relay #2", primary: relayId == 2 },
+							{ addr: "wss://relay.shhnowisnottheti.me/", comment: "ayunami relay #1", primary: relayId == 3 }
 						]
 					};
 					
