--- a/eaglercraft/index.html
+++ b/eaglercraft/index.html
@@ -30,6 +30,7 @@
 						localesURI: "lang/",
 						worldsDB: "worlds",
 						servers: [
+                            {addr: "wss://mc.arch.lol", name: MC ARCH" },
 							/* example: { addr: "ws://localhost:8081/", name: "Local test server" } */
 						],
 						relays: [
