--- a/eaglercraft/index.html
+++ b/eaglercraft/index.html
@@ -30,11 +30,12 @@
 						localesURI: "lang/",
 						worldsDB: "worlds",
 						servers: [
-                            {addr: "wss://mc.arch.lol", name:"MC ARCH" },
+                            { addr: "wss://mc.arch.lol", name: "MC ARCH" },
+                            { addr: "wss://mc.time-legacy.net/", name: "Time Legacy"}
 							/* example: { addr: "ws://localhost:8081/", name: "Local test server" } */
 						],
 						relays: [
-                            { addr: "wss://eaglerrelay.glitch.me/", comment: "Custom relay, hopefully unblocked on school wifi..." primary: relayId == 0 },
+                            { addr: "wss://eaglerrelay.glitch.me/", comment: "Custom relay, hopefully unblocked on school wifi...", primary: relayId == 0 },
 							{ addr: "wss://relay.deev.is/", comment: "lax1dude relay #1", primary: relayId == 1 },
 							{ addr: "wss://relay.lax1dude.net/", comment: "lax1dude relay #2", primary: relayId == 2 },
 							{ addr: "wss://relay.shhnowisnottheti.me/", comment: "ayunami relay #1", primary: relayId == 3 }
