added godot game

--- a/games.html
+++ b/games.html
@@ -106,7 +106,14 @@
                             <img src="images/grassBlock.png" alt="Minecraft">
                             <figcaption>Minecraft(Eaglercraft)!</figcaption>
                         </figure>
+                </a><td>
+                    <a href="web/index.html" target="_blank">
+                        <figure>
+                            <img src="web/index.icon.png" alt="slope">
+                            <figcaption>Spaceship...</figcaption>
+                        </figure>
                     </a>
+                </td>
                 </td>
                 </tr>
             </tr>
